Complete refactor: self-contained flake-based build
- Replace build.sh with Nix flake build commands
- Add complete QMK keyboard definition from vial-qmk-szr35
- Include linker scripts, default/factory keymaps, rules.mk
- Update flake.nix with:
  - build-firmware: Docker-based QMK build (caches vial-qmk)
  - flash-firmware: DFU flash with recovery instructions
  - fix-hid-perms: HID permission helper
- Comprehensive README with:
  - Full Miryoku layer documentation
  - DFU mode and recovery instructions
  - Troubleshooting guide
  - Hardware specifications

Firmware includes full Miryoku layout as compiled default.
Vial can still override via EEPROM.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ __pycache__/
 dist/
 build/
 
+# QMK build cache (cloned by flake build command)
+# Located in ~/.cache/szr35-vial-qmk/ (not in repo)
+
 # Nix
 result
 result-*
